--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "bootstrap": "^4.6.2",
     "jquery": "^3.7.1"
   },
   "devDependencies": {
